--- a/together-wherever/package.json
+++ b/together-wherever/package.json
@@ -21,6 +21,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "eslint-config-next": "14.2.13",
+    "@heroicons/react": "^2.2.0",
+    "@next/font": "^14.2.15"
   }
 }
