--- a/together-wherever/package.json
+++ b/together-wherever/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.5",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
