--- a/together-wherever/package.json
+++ b/together-wherever/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.5",
+    "axios": "^1.7.9",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
