--- a/together-wherever/package.json
+++ b/together-wherever/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "next": "14.2.13",
-    "react": "^18",
+    "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "@next/font": "^14.2.15",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
