--- a/together-wherever/package.json
+++ b/together-wherever/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@heroicons/react": "^2.2.0",
