--- a/together-wherever/package.json
+++ b/together-wherever/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^18",
+    "react-range": "^1.10.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5"
   },
